# embexpr

./: .gitignore  .isort.cfg  .travis.yml  Pipfile  README.rst  parser.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
embexpr/: __init__.py  __version__.py  error.py  expr.py
tests/: test_expr.py
