[tool.poetry]
name = "embexpr"
version = "0.1.0"
description = ""
authors = ["Nao YONASHIRO <owan.orisano@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
six = "^1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
